# retriva-rag-system-backend

./: .env.example  .gitignore  Dockerfile  README.md  auth.py  database.py  docker-compose.yml  main.py  pyproject.toml  start_server.sh  tasks.py
evaluation/datasets/: ragas_evaluation_dataset.json  results.csv
evaluation/scripts/: collect_data.py  ragas_evaluation.py
redis/: docker-compose.yaml
routes/: chats.py  files.py  projects.py
src/: server.py
src/agents/simple_agent/: agent.py
src/config/: settings.py
src/models/: index.py
src/rag/ingestion/: index.py  utils.py
src/rag/retrieval/: index.py  utils.py
src/routes/: chatRoutes.py  projectFilesRoutes.py  projectRoutes.py  userRoutes.py
src/services/: awsS3.py  celery.py  clerkAuth.py  llm.py  supabase.py  webScrapper.py
