[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Kartik <kartik.pawade.work@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
fastapi = ">=0.133.1,<0.134.0"
uvicorn = ">=0.41.0,<0.42.0"
supabase = ">=2.28.0,<3.0.0"
python-dotenv = ">=1.2.1,<2.0.0"
clerk-backend-api = ">=5.0.2,<6.0.0"
boto3 = ">=1.42.59,<2.0.0"
celery = ">=5.6.2,<6.0.0"
redis = ">=7.2.1,<8.0.0"
langchain = ">=1.2.10,<2.0.0"
langchain-community = ">=0.4.1,<0.5.0"
langchain-openai = ">=1.1.10,<2.0.0"
unstructured = {version = "==0.18.11", extras = ["all-docs"]}
scrapingbee = ">=2.0.2,<3.0.0"
langgraph = ">=1.0.10,<2.0.0"
langchain-tavily = ">=0.2.17,<0.3.0"
openai = ">=2.24.0,<3.0.0"
structlog = ">=25.5.0,<26.0.0"
torch = {version = "2.10.0", source = "pytorch-cpu"}
torchvision = {version = "0.25.0", source = "pytorch-cpu"}

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"